--- a/app/views/create-event/additional-questions.html
+++ b/app/views/create-event/additional-questions.html
@@ -121,7 +121,7 @@
 							  <div class="multiple-choice" data-target="show-answers">
 								  <input id="select-multiple" type="radio" name="radio-additional-questions-answers-type" value="select-multiple"
 										 {% if errorMultipleSelected %} checked="checked" {% endif %} >
-								  <label for="select-multiple">ultiple choice: unrestricted</label>
+								  <label for="select-multiple">Multiple choice: unrestricted</label>
 							  </div>
 						  </div>
 
