buttons chnaged to save and continue

--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -210,7 +210,7 @@
 
 
 		  <div class="form-group" style="margin-top:20px">
-			  <input type="submit" class="button" value="Continue">
+			  <input type="submit" class="button" value="Save and continue">
 			  <!-- <p style="margin-top:30px"><a href="/create-event/summary">There is no limit</a></p>  -->
 		  </div>
 
