--- a/app/views/create-event/additional-questions.html
+++ b/app/views/create-event/additional-questions.html
@@ -194,7 +194,7 @@
 
 
 		  <div class="form-group" style="margin-top:20px">
-			  <input type="submit" class="button" value="Continue">
+			  <input type="submit" class="button" value="Save and continue">
 		  </div>
 
 
