--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -94,7 +94,7 @@
 
 
 		  <div class="form-group" style="margin-top:20px">
-			  <input type="submit" class="button" value="Continue">
+			  <input type="submit" class="button" value="Save and continue">
 		  </div>
 
 	  </form>
