--- a/app/views/create-event/images.html
+++ b/app/views/create-event/images.html
@@ -100,7 +100,7 @@
 		<form action="/create-event/images-onwards" method="get" class="form">
 
 		  <div class="form-group" style="margin-top:20px">
-			  <input type="submit" class="button" value="Continue">
+			  <input type="submit" class="button" value="Save and continue">
 		  </div>
 
 	  </form>
