--- a/app/views/create-event/index.html
+++ b/app/views/create-event/index.html
@@ -235,7 +235,7 @@
 
 
 		  <div class="form-group" style="margin-top:5px">
-			  <input type="submit" class="button" value="Continue">
+			  <input type="submit" class="button" value="Save and continue">
 			  <p style="margin-top:25px"><a href="/create-event/create-event-onwards">I don't yet know when my event will happen - I'll complete this later</a></p>
 		  </div>
 
