links back to summary work for draft and live

--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -23,6 +23,7 @@
         font-size: 36px;
         margin-top:10px;
         margin-bottom:30px;
+        width:630px;
       }
 
       .description
@@ -86,7 +87,7 @@
     <div style="background-color: #fd7521; height:130px; padding-top:20px; padding-bottom:10px; display: flex;" >
 
       <div style="margin-right:50px; margin-left:20px; margin-top:30px; float: left; width:200px;">
-        <p style="font-size:18px;"><a href="/account">Account home</a></p>
+        <p style="font-size:18px;"><a href="/account#draft-events">Account home</a></p>
       </div>
 
       <div style="float:left; width:100%;">
