--- a/app/views/includes/draft-events.html
+++ b/app/views/includes/draft-events.html
@@ -8,7 +8,7 @@
       <thead>
       <tr>
         <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="/summary-data/{{itemRow}}">View summary</a></td>
-        <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="/preview-data/{{itemRow}}">View event page</a></td>
+        <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="/preview-data/{{itemRow}}/false">View event page</a></td>
         <td valign="top" style="width:40%; border: 0px; padding-right: 0px; padding-top: 2px; padding-bottom: 0px;">
           <details style="display:inline;">
             <summary><span class="summary">More options</span></summary>
