pretty much ready for testing round one

--- a/app/views/includes/draft-events.html
+++ b/app/views/includes/draft-events.html
@@ -7,15 +7,15 @@
     <table style="margin-top: 0px;">
       <thead>
       <tr>
-        <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="/summary-data/{{itemRow}}">View summary</a></td>
+        <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="/summary-data/{{itemRow}}/false">View summary</a></td>
         <td valign="top" style="border: 0px; padding-top: 2px; padding-bottom: 0px;"><a href="/preview-data/{{itemRow}}/false">View event page</a></td>
         <td valign="top" style="width:40%; border: 0px; padding-right: 0px; padding-top: 2px; padding-bottom: 0px;">
           <details style="display:inline;">
             <summary><span class="summary">More options</span></summary>
             <div class="panel panel-border-narrow">
               <p>
-                <a href="/summary-data/{{itemRow}}">Edit event</a> <br>
-                <a href="/clone-event/{{itemRow}}">Clone event</a> <br>
+                <a href="/summary-data/{{itemRow}}/false">Edit event</a> <br>
+                <a href="/clone-event/{{itemRow}}/false">Clone event</a> <br>
                 <!-- <a href="#">Close registrations</a> <br> -->
                 <a href="#">Delete event</a>
               </p>
