--- a/app/views/includes/live-events.html
+++ b/app/views/includes/live-events.html
@@ -14,8 +14,8 @@
             <summary><span class="summary">More options</span></summary>
             <div class="panel panel-border-narrow">
               <p>
-                <a href="/summary-data/{{itemRow}}">Edit event</a> <br>
-                <a href="/clone-event/{{itemRow}}">Clone event</a> <br>
+                <a href="/summary-data/{{itemRow}}/true">Edit event</a> <br>
+                <a href="/clone-event/{{itemRow}}/true">Clone event</a> <br>
                 <a href="#">Close registrations</a> <br>
                 <a href="#">Delete event</a>
               </p>
