--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -84,27 +84,31 @@
 
   <div align="center">
 
-    <div style="background-color: #fd7521; height:130px; padding-top:20px; padding-bottom:10px; display: flex;" >
+    {% if session.liveOrNot == "false" %}
+      <div style="background-color: #fd7521; height:130px; padding-top:20px; padding-bottom:10px; display: flex;" >
 
-      <div style="margin-right:50px; margin-left:20px; margin-top:30px; float: left; width:200px;">
-        <p style="font-size:18px;"><a href="/account#draft-events">Account home</a></p>
-      </div>
-
-      <div style="float:left; width:100%;">
-        <p style="margin:5px; margin-top:10px; font-size:36px; font-weight:700;">Draft event</p>
-        <p style="margin:25px; font-size:24px">www.great.gov.uk/event/mh43dz</p>
-      </div>
-
-
-      <form action="/make-draft-live" method="get" class="form">
-
-        <div style="margin-left:20px; margin-right:30px; margin-top:40px; float: right;">
-          <input type="submit" class="button" value="Make event live">
+        <div style="margin-right:50px; margin-left:20px; margin-top:30px; float: left; width:200px;">
+          <p style="font-size:18px;"><a href="/account#draft-events">Account home</a></p>
         </div>
 
-      </form>
+        <div style="float:left; width:100%;">
+          <p style="margin:5px; margin-top:10px; font-size:36px; font-weight:700;">Draft event</p>
+          <p style="margin:25px; font-size:24px">www.great.gov.uk/event/mh43dz</p>
+        </div>
 
-    </div>
+
+        <form action="/make-draft-live" method="get" class="form">
+
+          <div style="margin-left:20px; margin-right:30px; margin-top:40px; float: right;">
+            <input type="submit" class="button" value="Make event live">
+          </div>
+
+        </form>
+
+      </div>
+    {% endif %}
+
+
 
 
     <div style="width:1000px; height:350px; background-color: #FFFFFF; ">
