updated event name and password asterix

--- a/app/views/signin/index.html
+++ b/app/views/signin/index.html
@@ -32,7 +32,7 @@
 
 		  <div class="form-group" >
 			<label class="form-label-bold" for="full-name">Password</label>
-			<input type="text" class="form-control" id="full-name" style="width: 150px">
+			<input type="password" class="form-control" id="full-name" style="width: 150px">
 		  </div>
 
 
