--- a/app/views/create-event/preview.html
+++ b/app/views/create-event/preview.html
@@ -148,7 +148,7 @@
 
           <!-- WHO  -->
           <div style="text-align: left; width:300px; margin-right:20px;">
-            <p class="right-side-stuff"  style="white-space: pre-wrap;">Department for International Trade<br>Yorkshire and the Humber</p>
+            <p class="right-side-stuff"  style="white-space: pre-wrap;">Department for International Trade<br>North West</p>
           </div>
 
         </div>
