Updated names of region for testing

--- a/app/views/account/index.html
+++ b/app/views/account/index.html
@@ -11,7 +11,7 @@
     <div class="column-full">
 
       <h1 class="heading-large">
-		  DIT North West events
+		  DIT East of England events
       </h1>
 
 
