--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -19,7 +19,7 @@
 
 
 	  <!-- CONDITIONAL ERROR  -->
-		{% if errorAttendee %}
+		{% if false %}
 		<div class="error-summary" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
 
 			<h2 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
@@ -38,71 +38,24 @@
       {% endif %}
 
 	  <h1 class="heading-large" style="margin-top:15px">
-        Tickets
+        Attendee information
       </h1>
 
 
 	  <form action="/create-event/attendee-onwards" method="get" class="form">
 
-		  <!--   PLACES  -->
-		  <fieldset class="form-group">
 
-			  {% if errorAttendee %}
-			  	<div class="form-group  form-group-error">
-			  {% endif %}
+		  <p>During registration, all attendees are required to provide:</p>
+		  <ul class="list list-bullet">
+			  <li>Full name</li>
+			  <li>Job title</li>
+			  <li>Phone number</li>
+			  <li>Email address</li>
+			  <li>Company name</li>
+			  <li>Company address</li>
+			  <li>Primary sector</li>
+		  </ul>
 
-				  <label class="form-label-bold">
-					  Event capacity
-					  {% if errorAttendee %}
-						  <span class="error-message">
-							  Error message about personal details goes here
-						  </span>
-					  {% endif %}
-				  </label>
-
-
-				  <div class="form-date">
-						<!-- <p class="form-hint">For example, 31 3 1980</p>  -->
-					  <div class="form-group form-group-day">
-						   <input class="form-control  {% if errorAttendee %} form-control-error {% endif %}"
-								  id="attendee-quantity" name="attendee-quantity" type="number" pattern="[0-9]*"
-								  value="{{ data['attendee-quantity'] }}">
-				      </div>
-				  </div>
-
-			  {% if errorAttendee %}
-				</div>
-			  {% endif %}
-
-		  </fieldset>
-
-
-		  <fieldset class="form-group">
-			  <!--  message user will see when all tickets are gone -->
-			  <div class="form-group" style="margin-top:0px; margin-bottom:0px">
-				  <label class="form-label-bold" for="sold-out-message">
-					  Message when event reaches capacity (optional)
-				  </label>
-				  <textarea class="form-control" name="sold-out-message" id="sold-out-message" rows="2" style="width: 100%;"></textarea>
-			  </div>
-		  </fieldset>
-
-
-		  <details role="group">
-			  <summary role="button" aria-controls="details-content-0" aria-expanded="false">
-				  <span class="summary">Attendee details automatically collected</span></summary>
-			  <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true">
-				  <p>During registration, all attendees are required to provide:</p>
-				  <ul class="list list-bullet">
-					  <li>Full name</li>
-					  <li>Full address</li>
-					  <li>Phone number</li>
-					  <li>Email address</li>
-					  <li>Company name</li>
-					  <li>Primary sector</li>
-				  </ul>
-			  </div>
-		  </details>
 
 			<br>
 
@@ -114,98 +67,16 @@
 					  </label>
 					  <div class="form-date" style="margin-top:5px">
 						  <div class="multiple-choice">
-							  <input id="radio-inline-0" type="radio" name="radio-additional-questions-quantity" value="0" checked="checked">
-							  <label for="radio-inline-0">0</label>
-					  	  </div>
-						  <div class="multiple-choice">
-							  <input id="radio-inline-1" type="radio" name="radio-additional-questions-quantity" value="1">
-							  <label for="radio-inline-1">1</label>
+							  <input id="radio-inline-1" type="radio" name="radio-additional-questions-boolean" value="yes">
+							  <label for="radio-inline-1">Yes</label>
 						  </div>
 						  <div class="multiple-choice">
-							  <input id="radio-inline-2" type="radio" name="radio-additional-questions-quantity" value="2">
-							  <label for="radio-inline-2">2</label>
-						  </div>
-						  <div class="multiple-choice">
-							  <input id="radio-inline-3" type="radio" name="radio-additional-questions-quantity" value="3">
-							  <label for="radio-inline-3">3</label>
-						  </div>
-						  <div class="multiple-choice">
-							  <input id="radio-inline-4" type="radio" name="radio-additional-questions-quantity" value="4">
-							  <label for="radio-inline-4">4</label>
-						  </div>
-						  <div class="multiple-choice">
-							  <input id="radio-inline-5" type="radio" name="radio-additional-questions-quantity" value="5">
-							  <label for="radio-inline-5">5</label>
+							  <input id="radio-inline-2" type="radio" name="radio-additional-questions-boolean" value="no" checked="checked">
+							  <label for="radio-inline-2">No</label>
 						  </div>
 					  </div>
 				  </div>
 		  </fieldset>
-						  <!--
-						  <div id="q-1-section" style="display:none">
-							  <label class="form-label" for="question-one">
-								  Question 1
-							  </label>
-							  <input type="text" class="form-control" id="question-one" name="event-title"
-									 value="{{ data['question-one'] }}" style="width: 100%; margin-bottom: 20px;">
-						  </div>
-
-						  <div id="q-2-section" style="display:none">
-							  <label class="form-label" for="question-two">
-								  Question 2
-							  </label>
-							  <input type="text" class="form-control" id="question-two" name="event-title"
-									 value="{{ data['question-two'] }}" style="width: 100%; margin-bottom: 20px;">
-						  </div>
-
-						  <div id="q-3-section" style="display:none">
-							  <label class="form-label" for="question-two">
-								  Question 3
-							  </label>
-							  <input type="text" class="form-control" id="question-three" name="event-title"
-									 value="{{ data['question-three'] }}" style="width: 100%; margin-bottom: 20px;">
-						  </div>
-
-						  <div id="q-4-section" style="display:none">
-							  <label class="form-label" for="question-two">
-								  Question 4
-							  </label>
-							  <input type="text" class="form-control" id="question-four" name="event-title"
-									 value="{{ data['question-four'] }}" style="width: 100%; margin-bottom: 20px;">
-						  </div>
-
-						  <div id="q-5-section" style="display:none">
-							  <label class="form-label" for="question-five">
-								  Question 5
-							  </label>
-							  <input type="text" class="form-control" id="question-five" name="event-title"
-									 value="{{ data['question-five'] }}" style="width: 100%; margin-bottom: 20px;">
-						  </div>
-
-						  <input type="submit" id="add-question-button" class="button-secondary" value="Add a question" onclick="showAnotherQuestion()">
-							-->
-
-
-
-
-		  <!--
-
-		  <fieldset class="form-group">
-
-			  <label class="form-label-bold">
-				  When all tickets are gone
-			  </label>
-
-			  <div class="multiple-choice">
-				  <input id="radio-close-registrations" type="radio" name="radio-group-ticket-gone" value="close-registrations" checked="checked">
-				  <label for="radio-close-registrations">Close registration</label>
-			  </div>
-			  <div class="multiple-choice">
-				  <input id="radio-use-waiting-list" type="radio" name="radio-group-ticket-gone" value="use-waiting-list">
-				  <label for="radio-use-waiting-list">Add registration to a waiting list.</label>
-			  </div>
-
-		  </fieldset>
-			-->
 
 
 
@@ -223,36 +94,6 @@
 </main>
 
 
-
-<script>
-
-	function showAnotherQuestion()
-	{
-		if(document.getElementById('q-1-section').style.display == 'none')
-		{
-			document.getElementById('q-1-section').style.display = 'inline';
-		}
-		else if (document.getElementById('q-2-section').style.display == 'none')
-		{
-			document.getElementById('q-2-section').style.display = 'inline';
-		}
-		else if (document.getElementById('q-3-section').style.display == 'none')
-		{
-			document.getElementById('q-3-section').style.display = 'inline';
-		}
-		else if (document.getElementById('q-4-section').style.display == 'none')
-		{
-			document.getElementById('q-4-section').style.display = 'inline';
-		}
-		else if (document.getElementById('q-5-section').style.display == 'none')
-		{
-			document.getElementById('q-5-section').style.display = 'inline';
-			document.getElementById('add-question-button').style.display = 'none';
-		}
-
-
-	}
-</script>
 
 
 {% endblock %}
