--- a/app/views/create-event/additional-questions.html
+++ b/app/views/create-event/additional-questions.html
@@ -30,21 +30,28 @@
 				Please check the following errors and try again
 			</p>
 
+
+			{% if errorNewQuestionEmpty %}
+				<ul class="error-summary-list">
+					<li><a href="#previous-questions">Need select a new question or a previous question</a></li>
+				</ul>
+			{% endif %}
+
 			{% if errorQuestionEmpty %}
 				<ul class="error-summary-list">
-					<li><a href="#example-personal-details">Need to enter the question</a></li>
+					<li><a href="#show-answer-type">Need to enter the question</a></li>
 				</ul>
 			{% endif %}
 
 			{% if errorAnswerTypeEmpty %}
 				<ul class="error-summary-list">
-					<li><a href="#example-personal-details">Need to select the type of answers for their question</a></li>
+					<li><a href="#answer-types">Need to select the type of answers for their question</a></li>
 				</ul>
 			{% endif %}
 
 			{% if errorAnswersError %}
 			<ul class="error-summary-list">
-				<li><a href="#example-personal-details">You need to enter at least 2 answers</a></li>
+				<li><a href="#show-answers">You need to enter at least 2 answers</a></li>
 			</ul>
 			{% endif %}
 
@@ -63,18 +70,18 @@
 	  <form action="/create-event/question-onwards" method="get" class="form">
 
 
-		  <fieldset class="form-group">
-			  <!--  Addtional questions that the registering user need to answer  -->
+		  <fieldset class="form-group" style="margin-bottom:0; padding-bottom:30px" id="previous-questions">
+			  <!--  Additional questions that the registering user need to answer  -->
 
-				<div class="form-group" style="margin-top:10px; margin-bottom:0px">
+				<div class="form-group {% if session.previousQuestions.length == 0 %} js-hidden {% endif %}" style="margin-top:10px; margin-bottom:0px">
 
-					{% if errorQuestionEmpty %}
+					{% if errorNewQuestionEmpty %}
 						<div class="form-group  form-group-error">
 					{% endif %}
 
 						<label class="form-label-bold" for="question">
-							Question for attendee
-							{% if errorAnswerTypeEmpty %}
+							New or previous question
+							{% if errorNewQuestionEmpty %}
 								<span class="error-message">
 									Attendee question missing
 								</span>
@@ -87,25 +94,45 @@
 							<div class="form-date" style="margin-top:5px">
 
 								<div class="multiple-choice"  data-target="show-answer-type">
-									<input id="new-question" type="radio" name="radio-additional-questions" value="new-question">
-									<label for="enter-text">New Question</label>
+									<input id="new-question" type="radio" name="radio-additional-new-old-questions" value="new-question"
+										   {% if errorNewQuestionSelected %} checked="checked" {% endif %} >
+									<label for="new-question">New question</label>
 								</div>
 								<div class="multiple-choice" data-target="show-answer-type">
-									<input id="previous-question-one" type="radio" name="radio-additional-questions" value="previous-question-one"
-										   {% if errorOneSelected %} checked="checked" {% endif %} >
-									<label for="select-one">Multiple choice: single answer</label>
+									<input id="previous-question-one" type="radio" name="radio-additional-new-old-questions" value="previous-question-one"
+										   {% if errorOldQuestionOneSelected %} checked="checked" {% endif %} >
+									<label for="previous-question-one">{{ session.previousQuestions[0][1] }}&nbsp;</label>
 								</div>
-								<div class="multiple-choice" data-target="show-answer-type">
-									<input id="previous-question-two" type="radio" name="radio-additional-questions" value="previous-question-two"
-										   {% if errorMultipleSelected %} checked="checked" {% endif %} >
-									<label for="select-multiple">Multiple choice: unrestricted</label>
+
+								<div class="multiple-choice {% if session.previousQuestions.length < 2 %} js-hidden {% endif %} " data-target="show-answer-type"
+									 	   {% if errorOldQuestionTwoSelected %} checked="checked" {% endif %} >
+									<input id="previous-question-two" type="radio" name="radio-additional-new-old-questions" value="previous-question-two">
+									<label for="previous-question-two">{{ session.previousQuestions[1][1] }}&nbsp;</label>
+								</div>
+
+								<div class="multiple-choice {% if session.previousQuestions.length < 3 %} js-hidden {% endif %} " data-target="show-answer-type"
+									 	   {% if errorOldQuestionThreeSelected %} checked="checked" {% endif %} >
+									<input id="previous-question-three" type="radio" name="radio-additional-new-old-questions" value="previous-question-two">
+									<label for="previous-question-two">{{ session.previousQuestions[2][1] }}&nbsp;</label>
+								</div>
+
+								<div class="multiple-choice {% if session.previousQuestions.length < 4 %} js-hidden {% endif %} " data-target="show-answer-type"
+									       {% if errorOldQuestionFourSelected %} checked="checked" {% endif %} >
+									<input id="previous-question-four" type="radio" name="radio-additional-new-old-questions" value="previous-question-two">
+									<label for="previous-question-four">{{ session.previousQuestions[3][1] }}&nbsp;</label>
+								</div>
+
+								<div class="multiple-choice {% if session.previousQuestions.length < 5 %} js-hidden {% endif %} " data-target="show-answer-type"
+									 	   {% if errorOldQuestionFiveSelected %} checked="checked" {% endif %} >
+									<input id="previous-question-five" type="radio" name="radio-additional-new-old-questions" value="previous-question-two">
+									<label for="previous-question-five">{{ session.previousQuestions[4][1] }}&nbsp;</label>
 								</div>
 							</div>
 
 						</div>
 
 
-					{% if errorQuestionEmpty %}
+					{% if errorNewQuestionEmpty %}
 						</div>
 					{% endif %}
 
@@ -113,14 +140,36 @@
 		  	  </fieldset>
 
 
-			  <fieldset class="form-group js-hidden" id="show-answer-type">
+			  <fieldset class="form-group {% if 0 < session.previousQuestions.length  and
+			  									(errorQuestionEmpty == undefined or errorQuestionEmpty == false) and
+			  									(errorAnswerTypeEmpty == undefined or errorAnswerTypeEmpty == false) and
+			  									(errorAnswersError == undefined or errorAnswersError == false) %}
+			  								 js-hidden
+			  							  {% endif %}"
+						id="show-answer-type">
 
-				  <div id="show-new-question" style="width:100%; margin-left:50px; margin-bottom:25px">
-					  <input type="text" class="form-control  {% if errorQuestionEmpty %} form-control-error {% endif %}"
-							 id="question" name="question" value="{{ data['question'] }}" style="width:100%;">
+
+
+				  <div class="form-group {% if errorQuestionEmpty%} form-group-error {% endif %}" style="margin-top:10px; margin-bottom:0px;">
+					  <label class="form-label-bold" for="question">
+						  Question for attendee
+						  {% if errorQuestionEmpty %}
+									<span class="error-message">
+										Attendee question missing
+									</span>
+						  {% endif %}
+					  </label>
+					  <div id="show-new-question" style="width:100%;  margin-bottom:0px;">
+						  <input type="text" class="form-control  {% if errorQuestionEmpty %} form-control-error {% endif %}"
+								 id="question" name="question" value="{{ data['question'] }}" style="width:100%;">
+					  </div>
 				  </div>
 
-				  <div class="form-group" style="margin-top:0px; margin-bottom:0px">
+
+
+
+				  <!--  ANSWER TYPE -->
+				  <div class="form-group" style="margin-top:30px; margin-bottom:0px" id="answer-types">
 
 					  {% if errorAnswerTypeEmpty %}
 					  	<div class="form-group form-group-error">
@@ -130,7 +179,7 @@
 							  Set response format
 							  {% if errorAnswerTypeEmpty %}
 								  <span class="error-message">
-									  Attendee question missing
+									  Select type of answer
 								  </span>
 							  {% endif %}
 						  </label>
@@ -142,12 +191,12 @@
 							  <div class="multiple-choice" data-target="show-answers">
 								  <input id="select-one" type="radio" name="radio-additional-questions-answers-type" value="select-one"
 										 {% if errorOneSelected %} checked="checked" {% endif %} >
-								  <label for="select-one">Question one one one one</label>
+								  <label for="select-one">Multiple choice: single answer</label>
 							  </div>
 							  <div class="multiple-choice" data-target="show-answers">
 								  <input id="select-multiple" type="radio" name="radio-additional-questions-answers-type" value="select-multiple"
 										 {% if errorMultipleSelected %} checked="checked" {% endif %} >
-								  <label for="select-multiple">Question two two two</label>
+								  <label for="select-multiple">Multiple choice: unrestricted</label>
 							  </div>
 						  </div>
 
@@ -160,7 +209,7 @@
 		  </fieldset>
 
 
-		  <fieldset class="form-group js-hidden" id="show-answers">
+		  <fieldset class="form-group js-hidden" id="show-answers" style="margin-bottom:10px;">
 
 			  <!--   THE ANSWERS -->
 			  <div class="form-group  " style="margin-bottom:0px; margin-top:0px;" >
@@ -184,12 +233,18 @@
 						  <input type="text" class="form-control   {% if errorAnswersEmpty %} form-control-error {% endif %}
 								  								   {% if errorAnswersOnlyOneEntered %}  form-control-error {% endif %}"
 								 id="answer-2" name="answer-2" value="{{ data['answer-2'] }}" style="width:90%; margin-bottom: 15px;">
-						  <input type="text" class="form-control"
-								 id="answer-3" name="answer-3" value="{{ data['answer-3'] }}" style="width:90%; margin-bottom: 15px;">
-						  <input type="text" class="form-control"
-								 id="answer-4" name="answer-4" value="{{ data['answer-4'] }}" style="width:90%; margin-bottom: 15px;">
-						  <input type="text" class="form-control"
-								 id="answer-5" name="answer-5" value="{{ data['answer-5'] }}" style="width:90%; margin-bottom: 0px;">
+
+						  <p id="answer-3-add" style="color: #005ea5; text-decoration: underline; cursor: pointer;" onclick="show3()">Add another answer</p>
+						  <input type="text" class="form-control"  style="width:90%; margin-bottom: 15px; display:none;"
+								 id="answer-3-box" name="answer-3" value="{{ data['answer-3'] }}">
+
+						  <p id="answer-4-add" style="color: #005ea5; text-decoration: underline; display:none; cursor: pointer" onclick="show4()">Add another answer</p>
+						  <input type="text" class="form-control"  style="width:90%; margin-bottom: 15px; display:none;"
+								 id="answer-4-box" name="answer-4" value="{{ data['answer-4'] }}">
+
+						  <p id="answer-5-add" style="color: #005ea5; text-decoration: underline; display:none; cursor: pointer" onclick="show5()">Add another answer</p>
+						  <input type="text" class="form-control"  style="width:90%; margin-bottom: 15px; display:none;"
+								 id="answer-5-box" name="answer-5" value="{{ data['answer-5'] }}" style="width:90%; margin-bottom: 0px;">
 					  </div>
 
 				  {% if errorAnswersError %}
@@ -222,6 +277,34 @@
 </main>
 
 
+
+
+<script>
+	// When pressing the get main image button it swap in an image
+
+	function show3()
+	{
+		document.getElementById('answer-3-add').style.display = 'none';
+		document.getElementById('answer-3-box').style.display = 'inline';
+		document.getElementById('answer-4-add').style.display = 'inline';
+	}
+
+	function show4()
+	{
+		document.getElementById('answer-4-add').style.display = 'none';
+		document.getElementById('answer-4-box').style.display = 'inline';
+		document.getElementById('answer-5-add').style.display = 'inline';
+	}
+
+	function show5()
+	{
+		document.getElementById('answer-5-add').style.display = 'none';
+		document.getElementById('answer-5-box').style.display = 'inline';
+	}
+
+
+
+</script>
 
 
 
